remove errors, remove old templates, update titles, changed featured titles

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -1,8 +1,8 @@
 ---
 layout: distill
-title: Rectified Flow, Intro
-description: Demonstration of affine interpolations and their equivalent rectified flow dynamics
-tags: turorial
+title: Rectified Flow, An Introduction
+description: A Brief Introduction to the Rectified Flow Model
+tags: introduction
 giscus_comments: true
 date: 2024-12-06 10:00:00
 featured: true
