--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -1,8 +1,8 @@
 ---
 layout: distill
-title: Samplers
-description: Deterministic and Stochastic Samplers for Rectified Flow
-tags: turorial
+title: "Stochastic Samplers: Langevin is Safety Gurarail"
+description: Connections between Deterministic and Stochastic Samplers
+tags: tutorial
 giscus_comments: true
 date: 2024-12-10 10:00:00
 featured: true
