add example citations in sampler.md, need to add .bib in both _bibliography and assets/bibliography somehow

--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -18,6 +18,8 @@ chart:
 tikzjax: true
 typograms: true
 
+bibliography: 2024-12-10-samplers.bib
+
 authors:
   - name: Rectified Flow Research Group
     url: "https://example.com"
@@ -41,10 +43,9 @@ toc:
       - name: "OvershootingSampler"
 ---
 
-Rectified Flow learns ODE trajectories from the initial distribution $X_0 \sim \pi_0$ to target distribution $X_1 \sim \pi_1$. |
-In the special case where $(X_0, X_1) \sim \pi_0 \times \pi_1$ is an independent coupling and $\pi_0$ is a Gaussian distribution, we can use a **stochastic solver** instead of a deterministic ODE solver during inference. This approach can lead to improved sample quality.
+Rectified Flow learns ODE trajectories from the initial distribution $X_0 \sim \pi_0$ to target distribution $X_1 \sim \pi_1$. In the special case where $(X_0, X_1) \sim \pi_0 \times \pi_1$ is an independent coupling and $\pi_0$ is a Gaussian distribution, we can use a **stochastic solver** instead of a deterministic ODE solver during inference. This approach can lead to improved sample quality.
 
-In this section, we will introduce how to apply stochastic solvers to rectified flow models. We will:
+In this section, we will introduce how to apply stochastic solvers to rectified flow models. We will: <d-cite key="Liu2022FlowSA"></d-cite>
 
 - Understand why using a stochastic sampler might sometimes yield better results than a deterministic sampler (like Euler).
 - Understand how to use the different samplers in [Rectified Flow repo](https://github.com/lqiang67/rectified-flow)
