modified the email link to googlegroups and author name

--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -21,8 +21,8 @@ typograms: true
 bibliography: 2024-12-10-samplers.bib
 
 authors:
-  - name: Rectified Flow Research Group
-    url: "https://example.com"
+  - name: RectifiedFlow Group
+    url: "mailto:rectifiedflow@googlegroups.com" 
     affiliations:
       name: UT Austin
 
