--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -20,8 +20,8 @@ typograms: true
 
 # 如需添加作者信息，在下方添加authors字段
 authors:
-  - name: Rectified Flow Research Group
-    url: "rectifiedflow@googlegroups.com"
+  - name: RectifiedFlow Group
+    url: "mailto:rectifiedflow@googlegroups.com" 
     affiliations:
       name: UT Austin
 
