correct minor typo in sampler.md

--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -1,6 +1,6 @@
 ---
 layout: distill
-title: "Stochastic Samplers: Langevin is Safety Gurarail"
+title: "Stochastic Sampler: Langevin as Guardrail"
 description: Connections between Deterministic and Stochastic Samplers
 tags: tutorial
 giscus_comments: true
