modified featured posts limit

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -5,7 +5,7 @@ description: A Brief Introduction to the Rectified Flow Model
 tags: introduction
 giscus_comments: true
 date: 2024-12-06 10:00:00
-featured: true
+featured: false
 mermaid:
   enabled: true
   zoomable: true
