Save local changes before pulling

--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -28,81 +28,49 @@ authors:
 
 # 可选的目录配置
 toc:
-  - name: "Deterministic and Stochastic Sampler"
+  - name: "Stochastic Solvers: Guardrails for Generative Models  "
     subsections:
-      - name: "Why use stochastic sampling?"
-      - name: "Why Can a Stochastic Sampler Be Better?"
-      - name: "Example: Straight Rectified Flow"
-  - name: "Using Different Samplers in Rectified Flow"
-    subsections:
-      - name: "Euler Sampler"
-      - name: "Curved Euler Sampler"
-      - name: "SDESampler"
-      - name: "OvershootingSampler"
+      - name: "Langevin Dynamics as a Guardrail"
+      - name: "Why It Works"
+  - name: "SDEs with Gaussian Initial Distributions"
 ---
 
-Rectified Flow learns ODE trajectories from the initial distribution $X_0 \sim \pi_0$ to target distribution $X_1 \sim \pi_1$. |
-In the special case where $(X_0, X_1) \sim \pi_0 \times \pi_1$ is an independent coupling and $\pi_0$ is a Gaussian distribution, we can use a **stochastic solver** instead of a deterministic ODE solver during inference. This approach can lead to improved sample quality.
+### Stochastic Solvers: Guardrails for Generative Models  
 
-In this section, we will introduce how to apply stochastic solvers to rectified flow models. We will:
+For an introduction to rectified flow and its foundational concepts, check out our earlier post [here](https://rectifiedflow.github.io/blog/2024/intro/)
 
-- Understand why using a stochastic sampler might sometimes yield better results than a deterministic sampler (like Euler).
-- Understand how to use the different samplers in [Rectified Flow repo](https://github.com/lqiang67/rectified-flow)
+When working with generative models, particularly those using rectified flow, errors can accumulate over time as we solve the ODE $dZ_t = v_t(Z_t) dt$. These errors arise from model approximations and numerical discretization, leading to drift between the estimated distribution $\hat{Z}_t$ and the true distribution $\rho_t$. Here, $\rho_t$ represents the smooth density function of the true distribution $X_t$. This problem is exacerbated in low-density regions rarely sampled during training, where model inaccuracies are more pronounced.  
 
-## Deterministic and Stochastic Sampler
+To address this, **stochastic solvers** can replace deterministic ODE solvers during inference. By introducing stochastic dynamics, we can dynamically correct these errors, ensuring the estimated distribution stays aligned with the true one.  
 
-### Why use stochastic sampling?
+#### Langevin Dynamics as a Guardrail  
 
-For rectified flow models, a stochastic sampler sometimes produces better results than a deterministic one. For example, in diffusion models, people find that DDPM (stochastic) works better than DDIM (deterministic) for large-scale text-to-image tasks. Similarly, our [recent work](https://arxiv.org/abs/2411.19415) have shown that using a stochastic sampler with rectified flow can improve sample quality, particularly when it comes to rendering complex details like text.
+One common and promising approach is to use **Langevin dynamics** as a corrective mechanism. At each timestep $t$, a short segment of Langevin dynamics is applied to adjust $\hat{Z}_t$ toward $\rho_t$:  
 
-Below, we will compare results generated using an Euler sampler (deterministic) and an SDE sampler (stochastic). By visually comparing these results, you can see the qualitative improvements that a stochastic sampler can bring.
+$$
+dZ_{t, \tau} = \sigma_t^2 \nabla \log \rho_t(Z_{t, \tau}) d\tau + \sqrt{2\sigma_t} dW_\tau, \quad \tau \geq 0
+$$
 
-<div class="l-body">
-  <img src="/assets/img/euler_sde_compare.png" alt="cross" style="max-width:100%;" />
-</div>
+Here, $\sigma_t$ controls the noise level, and $\nabla \log \rho_t$ adjusts the drift toward high-probability regions of $\rho_t$. While simulating Langevin dynamics until equilibrium would align the distribution perfectly, this is often unnecessary. A single step of Langevin dynamics can sufficiently reduce drift when $\hat{Z}_t$ is already close to $\rho_t$.  
 
-From the visualization above, we see that the Euler samples do not align perfectly with the target distribution $\pi_1$. In contrast, the SDE sampler brings the generated samples closer to $\pi_1$.
+To streamline this process, Langevin corrections can be integrated directly into the rectified flow updates, resulting in a combined stochastic differential equation (SDE):  
 
-### Why Can a Stochastic Sampler Be Better?
+$$
+d\tilde{Z}_t = \underbrace{v_t(\tilde{Z}_t) dt}_{\text{Rectified Flow}} + \underbrace{\sigma_t^2 \nabla \log \rho_t(\tilde{Z}_t) dt + \sqrt{2\sigma_t} dW_t}_{\text{Langevin Dynamics}}, \quad \tilde{Z}_0 = Z_0
+$$
 
-You might wonder: what makes a stochastic sampler (one that adds randomness at inference) better than a deterministic sampler (one that follows a fixed path)?
+This combined SDE achieves two goals:
+1. The **rectified flow** drives the generative process forward as intended.  
+2. The **Langevin component** acts as a negative feedback loop, correcting distributional drift without bias when $\tilde{Z}_t$ and $\rho_t$ are already well aligned.  
 
-To understand this, let’s think about **Langevin dynamics**, which is a way of adding small random "pushes" that help samples move in the right direction when evolving from the initial distribution $\pi_0$ to the target distribution $\pi_1$.
+#### Why It Works  
 
-**Key Idea:**
+If the simulation is accurate, Langevin dynamics naturally stay in equilibrium, meaning they won’t alter the distribution unnecessarily. But when deviations occur, this mechanism gently nudges the estimate back on track, providing robustness to the inference process.  
 
-Rectified flow models learn a **velocity field** $v_t(\cdot)$ that describes how to move points from $\pi_0$ to $\pi_1$. Without noise, we have an ODE:
+By incorporating stochastic solvers like these, we create a dynamic correction framework that enhances the stability and accuracy of generative models, ensuring that outputs remain high-quality and faithful to the intended distributions.  
 
-$$ d \tilde{Z}_t = v_t(\tilde{Z}_t)dt $$
 
-Here:
-
-*   $\tilde{Z}_t$ is the sample on ODE at time $t$
-*   $v_t$ is the learned velocity at time $t$
-
-However, we can also consider a stochastic version by adding a noise-driven term. This leads to an SDE (Stochastic Differential Equation):
-
-$$ d \tilde{Z}_t = \underbrace{v_t(\tilde{Z}_t)dt}_{\text{Rectified Flow term}} + \underbrace{ \sigma_t^2 \nabla \log \rho_t(\tilde{Z}_t) dt + \sqrt{2} \sigma_t d W_t}_{\text{Langevin dynamics term}},$$
-
-Let’s break down the additional terms:
-
-*  $\rho_t$ is the probability density of the samples at time $t$
-
-*  $\nabla \log \rho_t(\tilde{Z}_t)$ is known as the **score function**. It points in the direction where density is higher. In other words, it tells us how to "correct" the trajectory so that samples move toward higher probability regions of the target distribution.
-
-* $\sigma_t$ is a noise scale that can vary with time. It controls how strong the random pushes are.
-
-* $W_t$ represents a Wiener process (or Brownian motion), which is a source of randomness.
-
-**What does this achieve?**
-
-* The **rectified flow term** $v_t(\tilde{Z}_t$ ties to move samples from $\pi_0$ to $\pi_1$ along a smoothly learned path.
-
-* The **Langevin dynamics term** $\sigma_t^2 \nabla \log \rho_t(\tilde{Z}_t) dt + \sqrt{2} \sigma_t d W_t$ add controlled randomness. The $\nabla \log \rho_t$ term pushes samples toward regions of higher density, while the $d W_t$ term injects noise that preserves the marginal distribution of $\tilde{Z}_t$.
-
-By combining these two effects, the stochastic sampler often finds a better overall solution than a purely deterministic one. It can "correct" the path that samples take, making sure they end up where $\pi_1$ actually has mass, resulting in more accurate and higher-quality samples.
-
-Score Function Visualization:
+**Score Function Visualization:**
 In the next toy example, we’ll visualize the score function $\nabla \log \rho_t$. This will help you see how these small corrective forces guide the samples toward the right regions, improving upon what a purely deterministic approach can achieve.
 
 <div class="l-body">
@@ -111,123 +79,40 @@ In the next toy example, we’ll visualize the score function $\nabla \log \rho_
 
 As shown here, the score function ($\nabla \log \rho_t$) points samples toward regions of higher density. This corrects the trajectories from the original predicted velocity, providing a drifting force that helps ensure samples converge to the most probable areas of the target distribution.
 
-## Use Different Samplers in Rectified Flow
 
-In the Rectified Flow repository, we provide several built-in sampler options. These samplers make it easy to experiment with different ways of generating samples from the learned velocity field. Each sampler follows a different rule for updating particles from the initial distribution $\pi_0$ (a known Gaussian) toward the target distribution $\pi_1$.
 
-### Euler Sampler
+### SDEs with Gaussian Initial Distributions
 
-The **Euler Sampler** is a simple, deterministic method. It updates each sample $X_t$ by moving along the direction of the velocity field $v(X_t, t)$:
+Previously, we demonstrated that for a rectified flow using interpolation $X_t = \alpha_t X_1 + \beta_t X_0$, two processes can achieve the same target distribution $\pi_1$:
 
-$$
-X_{t + \Delta t} = X_t + \Delta t \cdot v(X_t, t)
-$$
+*   **The ODE process:** 
 
-This means we are directly integrating the learned velocity field over time.
+    $$d Z_t = v_t(Z_t)dt$$
 
-```python
-from rectified_flow.samplers import EulerSampler
+*   **The SDE process:**
 
-euler_sampler = EulerSampler(
-    rectified_flow=rectflow,
-    num_steps=50,
-    num_samples=500,
-)
+    $$d Z_t = v_t(Z_t)dt + \sigma_t^2 \nabla \log \rho_t(Z_t) dt + \sqrt{2} \sigma_t d W_t,$$
 
-euler_sampler.sample_loop()
-
-```
-
-<div class="l-body">
-  <img src="/assets/img/euler_sample_result.png" alt="cross" style="max-width:100%;" />
-</div>
-
-### Curved Euler Sampler
-
-The **Curved Euler Sampler** uses interpolation to trace a curved path rather than a straight line. It works as follows:
-
-* Starting from the current state $(X_t, t)$
-* Use the velocity model to predict the next velocities and generate two reference points $\hat{X}_0$ and $\hat{X}_1$.
-* Interpolate between $\hat{X}_0$ and $\hat{X}_1$ using functions $\alpha(t)$ and $\beta(t)$ to get the next state:
+The **Euler method** is commonly used to discretize the ODE process, yielding the following update rule:
 
 $$
-X_{t + \Delta_t} = \alpha(t + \Delta t) \cdot \hat{X}_1 + \beta(t + \Delta t) \cdot \hat{X}_0
+\hat{Z}_{t + \Delta t} = \hat{Z}_t + \Delta t \cdot v(\tilde{Z}_t)
 $$
 
+Similarly, the SDE process can be discretized. When introducing a noise level $\sigma_t$ at time $t$, the update step becomes:
 
-```python
-from rectified_flow.samplers import CurvedEulerSampler
+$$
+\hat{Z}_{t + \Delta t} = \hat{Z}_t + \Delta t \cdot (v(\hat{Z}_t) + \frac{\sigma_t^2}{\beta_t \lambda_t} (\alpha_t v(\hat{Z}_t) - \dot{\alpha}_t \hat{Z}_t))  + \sqrt{2}  \sigma_t \xi_t, 
+$$
 
-curved_euler_sampler = CurvedEulerSampler(
-    rectified_flow=rectflow,
-    num_steps=10,
-    num_samples=500,
-)
+Here:
+* $\lambda_t = \dot{\alpha}_t \beta_t - \alpha_t \dot{\beta}_t$
+* $\xi$ is random Gaussian noise sampled from $\mathcal{N}(0, I)$.
 
-curved_euler_sampler.sample_loop()
+This update rule explicitly incorporates the Langevin dynamics term, derived in detail in Chapter 5.3 of the [Rectified Flow book](TBD: insert link).
 
-```
-
-<div class="l-body">
-  <img src="/assets/img/curved_euler_sample_result.png" alt="cross" style="max-width:100%;" />
-</div>
-
-### SDESampler
-
-The SDESampler introduces stochasticity (randomness) into the sampling process. we control the noise at time $t$ using the following hyperparameters:
-
-* noise_scale: Controls the amount of noise added at each step.
-
-* noise_decay_rate: Controls how the noise changes over time. A decay rate of 0 means noise level stays the same, while a decay rate of 1.0 means noise decreases over time.
-
-Mathematically, the effective noise is something like:
-
-$\text{Effective Noise at time t} = \text{step_size} * \text{noise_scale} * \beta_t ^ \text{noise_decay_rate}$
+In practice, the `AffineInterpSolver` in our [Rectified Flow repository](https://github.com/lqiang67/rectified-flow) provides an efficient way to compute the score function. This solver supports scenarios where at least two of the variables $(x_0, x_1, x_t, \dot{x}_t)$ are known, enabling the estimation of the others.
 
 
-```python
-from rectified_flow.samplers import SDESampler
-
-sde_sampler = SDESampler(
-    rectified_flow=rectflow,
-    num_steps=10,
-    num_samples=500,
-    noise_scale=15.0,      # Increase noise
-    noise_decay_rate=0.0   # Keep noise level constant
-)
-
-sde_sampler.sample_loop()
-```
 
 
-<div class="l-body">
-  <img src="/assets/img/sde_sample_result.png" alt="cross" style="max-width:100%;" />
-</div>
-
-### OvershootingSampler
-
-The OverShootingSampler, introduced in [our AMO Sampler paper]((https://arxiv.org/abs/2411.19415)), adds an extra "overshoot" step during sampling. This means that at each step, it doesn't just move forward along the trajectory, but goes a bit beyond the next point and then comes back, adding more stochasticity and potentially finding better paths. We can control the amount of noise added by:
-
-* c: A parameter controlling how far we overshoot.
-* overshooting_method: Determines the exact method used to overshoot (e.g., "t+dt").
-
-
-```python
-from rectified_flow.samplers import OverShootingSampler
-
-
-sde_sampler = OverShootingSampler(
-  rectified_flow=rectflow,
-	num_steps=10,
-	num_samples=500,
-  c=15.0,
-  overshooting_method="t+dt"
-)
-
-sde_sampler.sample_loop()
-```
-
-
-<div class="l-body">
-  <img src="/assets/img/overshooting_sample_result.png" alt="cross" style="max-width:100%;" />
-</div>
