--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -50,7 +50,7 @@ To address this, **stochastic solvers** can replace deterministic ODE solvers du
 One common and promising approach is to use **Langevin dynamics** as a corrective mechanism. At each timestep $t$, a short segment of Langevin dynamics is applied to adjust $\hat{Z}_t$ toward $\rho_t$:  
 
 $$
-dZ_{t, \tau} = \sigma_t^2 \nabla \log \rho_t(Z_{t, \tau}) d\tau + \sqrt{2\sigma_t} dW_\tau, \quad \tau \geq 0
+dZ_{t, \tau} = \sigma_t^2 \nabla \log \rho_t(Z_{t, \tau}) d\tau + \sqrt{2}\sigma_t dW_\tau, \quad \tau \geq 0
 $$
 
 Here, $\sigma_t$ controls the noise level, and $\nabla \log \rho_t$ adjusts the drift toward high-probability regions of $\rho_t$. While simulating Langevin dynamics until equilibrium would align the distribution perfectly, this is often unnecessary. A single step of Langevin dynamics can sufficiently reduce drift when $\hat{Z}_t$ is already close to $\rho_t$.  
@@ -58,7 +58,7 @@ Here, $\sigma_t$ controls the noise level, and $\nabla \log \rho_t$ adjusts the 
 To streamline this process, Langevin corrections can be integrated directly into the rectified flow updates, resulting in a combined stochastic differential equation (SDE):  
 
 $$
-d\tilde{Z}_t = \underbrace{v_t(\tilde{Z}_t) dt}_{\text{Rectified Flow}} + \underbrace{\sigma_t^2 \nabla \log \rho_t(\tilde{Z}_t) dt + \sqrt{2\sigma_t} dW_t}_{\text{Langevin Dynamics}}, \quad \tilde{Z}_0 = Z_0
+d\tilde{Z}_t = \underbrace{v_t(\tilde{Z}_t) dt}_{\text{Rectified Flow}} + \underbrace{\sigma_t^2 \nabla \log \rho_t(\tilde{Z}_t) dt + \sqrt{2} \sigma_t dW_t}_{\text{Langevin Dynamics}}, \quad \tilde{Z}_0 = Z_0
 $$
 
 This combined SDE achieves two goals:
