repair ci checks

--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -73,32 +73,32 @@ To understand this, let’s think about **Langevin dynamics**, which is a way of
 
 Rectified flow models learn a **velocity field** $v_t(\cdot)$ that describes how to move points from $\pi_0$ to $\pi_1$. Without noise, we have an ODE:
 
-$$ d \tilde{Z}_t = v_t(\tilde{Z}_t)dt $$
+$$ d \tilde{Z}\_t = v_t(\tilde{Z}\_t)dt $$
 
 Here:
 
-*   $\tilde{Z}_t$ is the sample on ODE at time $t$
-*   $v_t$ is the learned velocity at time $t$
+- $\tilde{Z}_t$ is the sample on ODE at time $t$
+- $v_t$ is the learned velocity at time $t$
 
 However, we can also consider a stochastic version by adding a noise-driven term. This leads to an SDE (Stochastic Differential Equation):
 
-$$ d \tilde{Z}_t = \underbrace{v_t(\tilde{Z}_t)dt}_{\text{Rectified Flow term}} + \underbrace{ \sigma_t^2 \nabla \log \rho_t(\tilde{Z}_t) dt + \sqrt{2} \sigma_t d W_t}_{\text{Langevin dynamics term}},$$
+$$ d \tilde{Z}_t = \underbrace{v_t(\tilde{Z}\_t)dt}_{\text{Rectified Flow term}} + \underbrace{ \sigma*t^2 \nabla \log \rho_t(\tilde{Z}\_t) dt + \sqrt{2} \sigma_t d W_t}*{\text{Langevin dynamics term}},$$
 
 Let’s break down the additional terms:
 
-*  $\rho_t$ is the probability density of the samples at time $t$
+- $\rho_t$ is the probability density of the samples at time $t$
 
-*  $\nabla \log \rho_t(\tilde{Z}_t)$ is known as the **score function**. It points in the direction where density is higher. In other words, it tells us how to "correct" the trajectory so that samples move toward higher probability regions of the target distribution.
+- $\nabla \log \rho_t(\tilde{Z}_t)$ is known as the **score function**. It points in the direction where density is higher. In other words, it tells us how to "correct" the trajectory so that samples move toward higher probability regions of the target distribution.
 
-* $\sigma_t$ is a noise scale that can vary with time. It controls how strong the random pushes are.
+- $\sigma_t$ is a noise scale that can vary with time. It controls how strong the random pushes are.
 
-* $W_t$ represents a Wiener process (or Brownian motion), which is a source of randomness.
+- $W_t$ represents a Wiener process (or Brownian motion), which is a source of randomness.
 
 **What does this achieve?**
 
-* The **rectified flow term** $v_t(\tilde{Z}_t$ ties to move samples from $\pi_0$ to $\pi_1$ along a smoothly learned path.
+- The **rectified flow term** $v_t(\tilde{Z}_t$ ties to move samples from $\pi_0$ to $\pi_1$ along a smoothly learned path.
 
-* The **Langevin dynamics term** $\sigma_t^2 \nabla \log \rho_t(\tilde{Z}_t) dt + \sqrt{2} \sigma_t d W_t$ add controlled randomness. The $\nabla \log \rho_t$ term pushes samples toward regions of higher density, while the $d W_t$ term injects noise that preserves the marginal distribution of $\tilde{Z}_t$.
+- The **Langevin dynamics term** $\sigma_t^2 \nabla \log \rho_t(\tilde{Z}_t) dt + \sqrt{2} \sigma_t d W_t$ add controlled randomness. The $\nabla \log \rho_t$ term pushes samples toward regions of higher density, while the $d W_t$ term injects noise that preserves the marginal distribution of $\tilde{Z}_t$.
 
 By combining these two effects, the stochastic sampler often finds a better overall solution than a purely deterministic one. It can "correct" the path that samples take, making sure they end up where $\pi_1$ actually has mass, resulting in more accurate and higher-quality samples.
 
@@ -146,14 +146,13 @@ euler_sampler.sample_loop()
 
 The **Curved Euler Sampler** uses interpolation to trace a curved path rather than a straight line. It works as follows:
 
-* Starting from the current state $(X_t, t)$
-* Use the velocity model to predict the next velocities and generate two reference points $\hat{X}_0$ and $\hat{X}_1$.
-* Interpolate between $\hat{X}_0$ and $\hat{X}_1$ using functions $\alpha(t)$ and $\beta(t)$ to get the next state:
+- Starting from the current state $(X_t, t)$
+- Use the velocity model to predict the next velocities and generate two reference points $\hat{X}_0$ and $\hat{X}_1$.
+- Interpolate between $\hat{X}_0$ and $\hat{X}_1$ using functions $\alpha(t)$ and $\beta(t)$ to get the next state:
 
 $$
 X_{t + \Delta_t} = \alpha(t + \Delta t) \cdot \hat{X}_1 + \beta(t + \Delta t) \cdot \hat{X}_0
 $$
-
 
 ```python
 from rectified_flow.samplers import CurvedEulerSampler
@@ -176,14 +175,13 @@ curved_euler_sampler.sample_loop()
 
 The SDESampler introduces stochasticity (randomness) into the sampling process. we control the noise at time $t$ using the following hyperparameters:
 
-* noise_scale: Controls the amount of noise added at each step.
+- noise_scale: Controls the amount of noise added at each step.
 
-* noise_decay_rate: Controls how the noise changes over time. A decay rate of 0 means noise level stays the same, while a decay rate of 1.0 means noise decreases over time.
+- noise_decay_rate: Controls how the noise changes over time. A decay rate of 0 means noise level stays the same, while a decay rate of 1.0 means noise decreases over time.
 
 Mathematically, the effective noise is something like:
 
 $\text{Effective Noise at time t} = \text{step_size} * \text{noise_scale} * \beta_t ^ \text{noise_decay_rate}$
-
 
 ```python
 from rectified_flow.samplers import SDESampler
@@ -199,18 +197,16 @@ sde_sampler = SDESampler(
 sde_sampler.sample_loop()
 ```
 
-
 <div class="l-body">
   <img src="/assets/img/sde_sample_result.png" alt="cross" style="max-width:100%;" />
 </div>
 
 ### OvershootingSampler
 
-The OverShootingSampler, introduced in [our AMO Sampler paper]((https://arxiv.org/abs/2411.19415)), adds an extra "overshoot" step during sampling. This means that at each step, it doesn't just move forward along the trajectory, but goes a bit beyond the next point and then comes back, adding more stochasticity and potentially finding better paths. We can control the amount of noise added by:
+The OverShootingSampler, introduced in [our AMO Sampler paper](<(https://arxiv.org/abs/2411.19415)>), adds an extra "overshoot" step during sampling. This means that at each step, it doesn't just move forward along the trajectory, but goes a bit beyond the next point and then comes back, adding more stochasticity and potentially finding better paths. We can control the amount of noise added by:
 
-* c: A parameter controlling how far we overshoot.
-* overshooting_method: Determines the exact method used to overshoot (e.g., "t+dt").
-
+- c: A parameter controlling how far we overshoot.
+- overshooting_method: Determines the exact method used to overshoot (e.g., "t+dt").
 
 ```python
 from rectified_flow.samplers import OverShootingSampler
@@ -226,7 +222,6 @@ sde_sampler = OverShootingSampler(
 
 sde_sampler.sample_loop()
 ```
-
 
 <div class="l-body">
   <img src="/assets/img/overshooting_sample_result.png" alt="cross" style="max-width:100%;" />
