add names for blogs, add citations, chapters

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -17,10 +17,11 @@ chart:
   vega_lite: true
 tikzjax: true
 typograms: true
+bibliography: 2024-12-06-intro.bib
 
 # 如需添加作者信息，在下方添加authors字段
 authors:
-  - name: RectifiedFlow Group
+  - name: Qiang Liu, Runlong Liao, Xixi Hu, Bo Liu, Yule Duan
     url: "mailto:rectifiedflow@googlegroups.com"
     affiliations:
       name: UT Austin
@@ -34,6 +35,8 @@ toc:
   - name: "Rectified Flow"
   - name: "Reflow"
 ---
+
+This blog provides a brief introduction to the Rectified Flow idea, which serves as a mainstream algorithm for training deep generative models. For a more comprehensive and rigorous discussion on the introduction, please refer to Chapter 1 in the [Rectified Flow book]() and the original paper<d-cite key="Liu2022FlowSA"></d-cite>.
 
 ## Overview
 
