--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -21,7 +21,7 @@ typograms: true
 bibliography: 2024-12-10-samplers.bib
 
 authors:
-  - name: RectifiedFlow Group
+  - name: Qiang Liu, Xixi Hu, Runlong Liao, Bo Liu, Yule Duan
     url: "mailto:rectifiedflow@googlegroups.com"
     affiliations:
       name: UT Austin
@@ -39,7 +39,9 @@ toc:
 
 ### Stochastic Solvers: Guardrails for Generative Models
 
-For an introduction to rectified flow and its foundational concepts, check out our earlier post [here](https://rectifiedflow.github.io/blog/2024/intro/)
+In this blog, we will elaborate on, given a pretrained flow model, how does a stochastic sampler (like DDPM) relate to a deterministic sampler as conducting simple Euler steps in rectified flow. In particular, we will show that one can convert any deterministic sampler to its corresponding stochastic counterparts, and vice versa. The main difference is that the stochastic sampler has an extra Langevin dynamics term, which could potentially help correct the discretization error from cumulative Euler steps. For a more comprehensive and rigorous discussion on this topic, please refer to Chapter 5 in the [Rectified Flow book]().
+
+For an introduction to rectified flow and its foundational concepts, check out our earlier post [here](https://rectifiedflow.github.io/blog/2024/intro/)<d-cite key="Liu2022FlowSA"></d-cite>
 
 When working with generative models, particularly those using rectified flow, errors can accumulate over time as we solve the ODE $dZ_t = v_t(Z_t) dt$. These errors arise from model approximations and numerical discretization, leading to drift between the estimated distribution $\hat{Z}_t$ and the true distribution $\rho_t$. Here, $\rho_t$ represents the smooth density function of the true distribution $X_t$. This problem is exacerbated in low-density regions rarely sampled during training, where model inaccuracies are more pronounced.
 
