update the blog author names

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -21,10 +21,14 @@ bibliography: 2024-12-06-intro.bib
 
 # 如需添加作者信息，在下方添加authors字段
 authors:
-  - name: Qiang Liu, Runlong Liao, Xixi Hu, Bo Liu, Yule Duan
+  - name: Qiang Liu
     url: "mailto:rectifiedflow@googlegroups.com"
     affiliations:
       name: UT Austin
+  - name: Runlong Liao
+  - name: Xixi Hu
+  - name: Bo Liu
+  - name: Yule Duan
 
 # 如果有文献，请指定bibliography文件
 # bibliography: 2024-12-11-distill.bib
