--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -21,10 +21,14 @@ typograms: true
 bibliography: 2024-12-10-samplers.bib
 
 authors:
-  - name: Qiang Liu, Xixi Hu, Runlong Liao, Bo Liu, Yule Duan
+  - name: Qiang Liu
     url: "mailto:rectifiedflow@googlegroups.com"
     affiliations:
       name: UT Austin
+  - name: Xixi Hu
+  - name: Runlong Liao
+  - name: Bo Liu
+  - name: Yule Duan
 
 # bibliography: 2024-12-11-distill.bib
 
