modified blog posts, add overviews at beginning to include reference to book chapters

--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -34,6 +34,7 @@ authors:
 
 # 可选的目录配置
 toc:
+  - name: "Overview"
   - name: "Stochastic Solvers: Guardrails for Generative Models  "
     subsections:
       - name: "Langevin Dynamics as a Guardrail"
@@ -41,9 +42,11 @@ toc:
   - name: "SDEs with Gaussian Initial Distributions"
 ---
 
-### Stochastic Solvers: Guardrails for Generative Models
+## Overview
 
 In this blog, we will elaborate on, given a pretrained flow model, how does a stochastic sampler (like DDPM) relate to a deterministic sampler as conducting simple Euler steps in rectified flow. In particular, we will show that one can convert any deterministic sampler to its corresponding stochastic counterparts, and vice versa. The main difference is that the stochastic sampler has an extra Langevin dynamics term, which could potentially help correct the discretization error from cumulative Euler steps. For a more comprehensive and rigorous discussion on this topic, please refer to Chapter 5 in the [Rectified Flow book]().
+
+## Stochastic Solvers: Guardrails for Generative Models
 
 For an introduction to rectified flow and its foundational concepts, check out our earlier post [here](https://rectifiedflow.github.io/blog/2024/intro/)<d-cite key="Liu2022FlowSA"></d-cite>
 
@@ -87,7 +90,7 @@ In the next toy example, we’ll visualize the score function $\nabla \log \rho_
 
 As shown here, the score function ($\nabla \log \rho_t$) points samples toward regions of higher density. This corrects the trajectories from the original predicted velocity, providing a drifting force that helps ensure samples converge to the most probable areas of the target distribution.
 
-### SDEs with Gaussian Initial Distributions
+## SDEs with Gaussian Initial Distributions
 
 Previously, we demonstrated that for a rectified flow using interpolation $X_t = \alpha_t X_1 + \beta_t X_0$, two processes can achieve the same target distribution $\pi_1$:
 
