Update figure layout

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -207,7 +207,7 @@ $$
 
 Hence, we would obtain perfectly straight-line dynamics in the limit of $$k \to +\infty$$. Note that reflow can begin from any coupling $$(X_0, X_1)$$, so it provides a general procedure for straightening and thus speeding up any given dynamics while preserving the marginals.
 
-<div class="l-page">
+<div class="l-body">
   <iframe src="{{ '/assets/plotly/intro_2rf.html' | relative_url }}" 
           frameborder="0" 
           scrolling="no" 
