update post teaser figures

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -2,6 +2,8 @@
 layout: distill
 title: Rectified Flow, An Introduction
 description: A Brief Introduction to the Rectified Flow Model
+teaser_image: /assets/images/rectified_flow_overview.png
+teaser_image_alt: "Overview of Rectified Flow"
 tags: introduction
 giscus_comments: true
 date: 2024-12-06 10:00:00
@@ -39,7 +41,12 @@ toc:
   - name: "Reflow"
 ---
 
+<div class="hero">
+  <img src="/assets/img/teaser_post1.png" alt="Rectified Flow Overview" style="width: 100%; max-height: 500px; object-fit: cover; border-radius: 10px; margin-bottom: 20px;">
+</div>
+
 ## Overview
+
 
 This blog provides a brief introduction to the Rectified Flow idea, which serves as a mainstream algorithm for training deep generative models. For a more comprehensive and rigorous discussion on the introduction, please refer to Chapter 1 in the [Rectified Flow book]() and the original paper<d-cite key="Liu2022FlowSA"></d-cite>.
 
