--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -41,6 +41,11 @@ toc:
   - name: "SDEs with Gaussian Initial Distributions"
 ---
 
+<div class="hero">
+  <img src="/assets/img/teaser_post3.png" alt="Rectified Flow Overview" style="width: 100%; max-height: 500px; object-fit: cover; border-radius: 10px; margin-bottom: 20px;">
+</div>
+
+
 ## Overview
 
 In this blog, we will elaborate on, given a pretrained flow model, how does a stochastic sampler (like DDPM) relate to a deterministic sampler as conducting simple Euler steps in rectified flow. In particular, we will show that one can convert any deterministic sampler to its corresponding stochastic counterparts, and vice versa. The main difference is that the stochastic sampler has an extra Langevin dynamics term, which could potentially help correct the discretization error from cumulative Euler steps. For a more comprehensive and rigorous discussion on this topic, please refer to Chapter 5 in the [Rectified Flow book]().
