update book to lecture note

--- a/_posts/2024-12-06-intro.md
+++ b/_posts/2024-12-06-intro.md
@@ -48,7 +48,7 @@ toc:
 ## Overview
 
 
-This blog provides a brief introduction to the Rectified Flow idea, which serves as a mainstream algorithm for training deep generative models. For a more comprehensive and rigorous discussion on the introduction, please refer to Chapter 1 in the [Rectified Flow book]() and the original paper<d-cite key="Liu2022FlowSA"></d-cite>.
+This blog provides a brief introduction to the Rectified Flow idea, which serves as a mainstream algorithm for training deep generative models. For a more comprehensive and rigorous discussion on the introduction, please refer to Chapter 1 in the [Rectified Flow Lecture Notes]() and the original paper<d-cite key="Liu2022FlowSA"></d-cite>.
 
 Generative modeling can be formulated as finding a computational procedure that transforms a noise distribution, denoted by $$\pi_0$$, into the unknown data distribution $$\pi_1$$. In flow models, this procedure is represented by an ordinary differential equation (ODE):
 
