--- a/_posts/2024-12-10-samplers.md
+++ b/_posts/2024-12-10-samplers.md
@@ -48,7 +48,7 @@ toc:
 
 ## Overview
 
-In this blog, we will elaborate on, given a pretrained flow model, how does a stochastic sampler (like DDPM) relate to a deterministic sampler as conducting simple Euler steps in rectified flow. In particular, we will show that one can convert any deterministic sampler to its corresponding stochastic counterparts, and vice versa. The main difference is that the stochastic sampler has an extra Langevin dynamics term, which could potentially help correct the discretization error from cumulative Euler steps. For a more comprehensive and rigorous discussion on this topic, please refer to Chapter 5 in the [Rectified Flow book]().
+In this blog, we will elaborate on, given a pretrained flow model, how does a stochastic sampler (like DDPM) relate to a deterministic sampler as conducting simple Euler steps in rectified flow. In particular, we will show that one can convert any deterministic sampler to its corresponding stochastic counterparts, and vice versa. The main difference is that the stochastic sampler has an extra Langevin dynamics term, which could potentially help correct the discretization error from cumulative Euler steps. For a more comprehensive and rigorous discussion on this topic, please refer to Chapter 5 in the [Rectified Flow Lecture Notes]().
 
 ## Stochastic Solvers: Guardrails for Generative Models
 
@@ -123,6 +123,6 @@ Here:
 - $\lambda_t = \dot{\alpha}_t \beta_t - \alpha_t \dot{\beta}_t$
 - $\xi$ is random Gaussian noise sampled from $\mathcal{N}(0, I)$.
 
-This update rule explicitly incorporates the Langevin dynamics term, derived in detail in Chapter 5.3 of the [Rectified Flow book](TBD: insert link).
+This update rule explicitly incorporates the Langevin dynamics term, derived in detail in Chapter 5.3 of the [Rectified Flow Lecture Notes](TBD: insert link).
 
 In practice, the `AffineInterpSolver` in our [Rectified Flow repository](https://github.com/lqiang67/rectified-flow) provides an efficient way to compute the score function. This solver supports scenarios where at least two of the variables $(x_0, x_1, x_t, \dot{x}_t)$ are known, enabling the estimation of the others.
